--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,15 +3,17 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        java: [1.8, 11]
+    name: Test by Java ${{matrix.java}}
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
+    - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{matrix.java}}
     - name: Build with Maven
-      run: ./mvnw -B package
+      run: ./mvnw -B test
