--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,7 @@ name: Java CI
 on:
   push:
     paths:
+    - '.github/workflows/maven.yml'
     - '.mvn/**'
     - 'mvnw'
     - 'mvnw.cmd'
@@ -14,13 +15,21 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [1.8, 11]
-    name: Test by Java ${{matrix.java}}
+        java:
+        - 1.8
+        - 11
+    name: Test by Java ${{ matrix.java }}
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: ${{matrix.java}}
+        java-version: ${{ matrix.java }}
+    - uses: actions/cache@v1
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
     - name: Build with Maven
-      run: ./mvnw -B test
+      run: ./mvnw -B test -Dmaven.compiler.source=${{ matrix.java }} -Dmaven.compiler.target=${{ matrix.java }}
