--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,6 @@ jobs:
     name: Hello World
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Greeting
       run: cat hello.txt
