--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
     paths:
     - '.github/workflows/**'
     - 'hello.txt'
+  pull_request:
+    branches:
+      - master
 
 jobs:
   hello:
@@ -15,7 +18,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Greeting
-      run: cat hello.txt
+      run: |
+        cat hello.txt
+        echo github.ref = ${{ github.ref }}
+        echo github.sha = ${{ github.sha }}
 
   docker:
     name: Docker
