--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
         cat hello.txt
         echo github.ref = ${{ github.ref }}
         echo github.sha = ${{ github.sha }}
+        echo github.action = ${{ github.action }}
+        echo github.action_path = ${{ github.action_path }}
+        echo github.actor = ${{ github.actor }}
 
   docker:
     name: Docker
