--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - master
     paths:
-    - '.github/workflows/**'
+    - '.github/workflows/ci.yml'
     - 'hello.txt'
   pull_request:
     branches:
