--- a/.github/workflows/zip.yaml
+++ b/.github/workflows/zip.yaml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
-        apt-get install -y convmv
+        sudo apt-get install -y convmv
         convmv --notest -r -f utf8 -t sjis ./zip-files
         zip -r example.zip ./zip-files
     - uses: actions/upload-artifact@v3
