--- a/.github/workflows/zip.yaml
+++ b/.github/workflows/zip.yaml
@@ -9,12 +9,12 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
         sudo apt-get install -y convmv
-        convmv --notest -r -f utf8 -t sjis ./zip-files
-        cd zip-files
-        zip -r ../example.zip .
+        mv zip-files example
+        convmv --notest -r -f utf8 -t sjis example
+        zip -r example.zip example
     - uses: actions/upload-artifact@v3
       with:
-        name: example.zip
+        name: example
         path: example.zip
         retention-days: 1
 
