--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
       run: |
         cat hello.txt
         echo github.ref = ${{ github.ref }}
+        echo github.base_ref = ${{ github.base_ref }}
+        echo github.head_ref = ${{ github.head_ref }}
         echo github.ref_name = ${{ github.ref_name }}
         echo github.ref_type = ${{ github.ref_type }}
         echo github.sha = ${{ github.sha }}
