--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Greeting
       run: |
+        set x
         cat hello.txt
         echo github.ref = ${{ github.ref }}
         echo github.base_ref = ${{ github.base_ref }}
