--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Greeting
       run: |
-        set x
+        set eux
         cat hello.txt
         echo github.ref = ${{ github.ref }}
         echo github.base_ref = ${{ github.base_ref }}
@@ -32,7 +32,7 @@ jobs:
         echo github.action_path = ${{ github.action_path }}
         echo github.actor = ${{ github.actor }}
         echo github.event_name = ${{ github.event_name }}
-        if "${{ github.event_name }}" = "pull_request"; then
+        if [ "${{ github.event_name }}" = "pull_request" ]; then
           echo github.event.number = ${{ github.event.number }}
         fi
 
