ブランチ書かなあかんのか

--- a/.github/workflows/git-push.yaml
+++ b/.github/workflows/git-push.yaml
@@ -2,6 +2,8 @@ name: git push example
 
 on:
   push:
+    branches:
+    - master
     paths:
     - '.github/workflows/git-push.yml'
     - 'date.txt'
