--- a/.github/workflows/git-push.yaml
+++ b/.github/workflows/git-push.yaml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
     - '.github/workflows/git-push.yaml'
-    - 'date.txt'
+    - 'date-trigger.txt'
   workflow_dispatch: {}
 
 jobs:
