--- a/.github/workflows/git-push.yaml
+++ b/.github/workflows/git-push.yaml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: date > date.txt
     - run: |
-        git config --local user.email backpaper0@gmail.com
+        git config --local user.email 209262+backpaper0@users.noreply.github.com
         git config --local user.name "Uragami Taichi"
     - run: |
         git add date.txt
